@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021 Obeo.
+ * Copyright (c) 2021, 2022 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -13,6 +13,12 @@
 import { createTheme, responsiveFontSizes } from '@material-ui/core/styles';
 
 const fallbackTheme = createTheme({
+  palette: {
+    navigation: {
+      leftBackground: 'white',
+      rightBackground: 'white',
+    },
+  },
   typography: {
     h1: {
       fontSize: '4rem',
