@@ -11,128 +11,124 @@
  *     Obeo - initial API and implementation
  *******************************************************************************/
 
-import MuiAccordion from '@material-ui/core/Accordion';
-import AccordionDetails from '@material-ui/core/AccordionDetails';
-import MuiAccordionSummary from '@material-ui/core/AccordionSummary';
-import MuiCollapse, { CollapseProps } from '@material-ui/core/Collapse';
-import { makeStyles, withStyles } from '@material-ui/core/styles';
-import ExpandMoreIcon from '@material-ui/icons/ExpandMore';
+import IconButton from '@material-ui/core/IconButton';
+import { makeStyles } from '@material-ui/core/styles';
+import Tooltip from '@material-ui/core/Tooltip';
+import Typography from '@material-ui/core/Typography';
 import React, { useState } from 'react';
 import { SiteProps } from './Site.types';
 
 const useSiteStyles = makeStyles((theme) => ({
-  site: {
+  leftSite: {
+    display: 'flex',
+    flexDirection: 'row',
+  },
+  rightSite: {
+    display: 'flex',
+    flexDirection: 'row-reverse',
+  },
+  viewSelectorLeft: {
+    display: 'flex',
+    flexDirection: 'column',
+    background: theme.palette.navigation.leftBackground,
+  },
+  viewSelectorRight: {
+    display: 'flex',
+    flexDirection: 'column',
+    background: theme.palette.navigation.rightBackground,
+  },
+  viewSelectorIcon: {
+    color: theme.palette.text.disabled,
+  },
+  viewSelectorIconSelectedLeft: {
+    color: theme.palette.primary.main,
+    borderLeft: 'solid 2px',
+    borderRadius: 0,
+  },
+  viewSelectorIconSelectedRight: {
+    color: theme.palette.primary.main,
+    borderRight: 'solid 2px',
+    borderRadius: 0,
+  },
+  viewIcon: {
+    padding: theme.spacing(1),
+  },
+  view: {
+    flexGrow: 1,
     display: 'flex',
     flexDirection: 'column',
   },
-  expanded: {
+  viewHeader: {
+    display: 'flex',
+    flexDirection: 'row',
+    padding: theme.spacing(1),
+    columnGap: theme.spacing(1),
+    borderBottomColor: theme.palette.divider,
+    borderBottomWidth: '1px',
+    borderBottomStyle: 'solid',
+  },
+  viewContent: {
     flexGrow: 1,
     overflow: 'auto',
   },
-  accordionDetailsRoot: {
-    display: 'block',
-    padding: '0px',
-  },
 }));
 
-const Accordion = withStyles({
-  root: {
-    display: 'grid',
-    gridTemplateColumns: 'minmax(0,1fr)',
-    gridTemplateRows: 'min-content minmax(0,1fr)',
-    border: '1px solid rgba(0, 0, 0, .125)',
-    boxShadow: 'none',
-    '&:not(:last-child)': {
-      borderBottom: '0px',
-    },
-    '&:before': {
-      display: 'none',
-    },
-    '&$expanded': {
-      margin: '0px',
-    },
-  },
-  expanded: {},
-})(MuiAccordion);
-
-const AccordionSummary = withStyles({
-  root: {
-    borderBottom: '1px solid rgba(0, 0, 0, .125)',
-    marginBottom: -1,
-    '&$expanded': {
-      minHeight: 48,
-    },
-  },
-  content: {
-    '&$expanded': {
-      margin: '0px',
-    },
-  },
-  expanded: {},
-})(MuiAccordionSummary);
-
-const StyledCollapse = withStyles({
-  entered: {
-    overflow: 'auto',
-  },
-})(MuiCollapse);
-
-const CustomCollapse = (props: CollapseProps) => {
-  const { children, ...collapseProps } = props;
-
-  const handleEntering = (node: HTMLElement, isAppearing: boolean) => {
-    node.style.height = 'auto';
-  };
-
-  const handleExit = (node: HTMLElement) => {
-    node.style.height = 'auto';
-  };
-
-  return (
-    <StyledCollapse {...collapseProps} onEntering={handleEntering} onExit={handleExit} timeout={0}>
-      {children}
-    </StyledCollapse>
-  );
-};
-
-export const Site = ({ editingContextId, selection, setSelection, readOnly, contributions }: SiteProps) => {
+export const Site = ({ editingContextId, selection, setSelection, readOnly, side, contributions }: SiteProps) => {
   const classes = useSiteStyles();
-  const [expanded, setExpanded] = useState<number>(0);
+  const [selectedViewIndex, setSelectedViewIndex] = useState<number>(0);
 
-  let classSite = classes.site;
-
-  return (
-    <div className={classSite}>
+  const viewSelector = (
+    <div className={side === 'left' ? classes.viewSelectorLeft : classes.viewSelectorRight}>
       {contributions.map((contribution, index) => {
         const title = contribution.props.title;
-        const Component = contribution.props.component;
+        const icon = contribution.props.icon;
+        let iconClassName = classes.viewSelectorIcon;
+        if (index === selectedViewIndex) {
+          iconClassName =
+            side === 'left' ? classes.viewSelectorIconSelectedLeft : classes.viewSelectorIconSelectedRight;
+        }
         return (
-          <Accordion
-            key={index}
-            square
-            expanded={expanded === index}
-            className={expanded === index ? classes.expanded : ''}
-            onChange={(event, expanded) => {
-              if (expanded) {
-                setExpanded(index);
-              }
-            }}
-            TransitionComponent={CustomCollapse}
-          >
-            <AccordionSummary expandIcon={<ExpandMoreIcon />} IconButtonProps={{ size: 'small' }}>
-              {title}
-            </AccordionSummary>
-            <AccordionDetails className={classes.accordionDetailsRoot} data-testid={`${title} AccordionDetails`}>
-              <Component
-                editingContextId={editingContextId}
-                selection={selection}
-                setSelection={setSelection}
-                readOnly={readOnly}
-              />
-            </AccordionDetails>
-          </Accordion>
+          <Tooltip enterDelay={250} title={title} key={index} className={classes.viewIcon}>
+            <IconButton
+              className={iconClassName}
+              aria-label={title}
+              data-testid={`viewselector-${title}`}
+              onClick={() => setSelectedViewIndex(index)}
+            >
+              {icon}
+            </IconButton>
+          </Tooltip>
         );
       })}
+    </div>
+  );
+
+  let selectedView = undefined;
+  if (selectedViewIndex < contributions.length) {
+    const { title, icon, component: Component } = contributions[selectedViewIndex].props;
+    selectedView = (
+      <div className={classes.view}>
+        <div className={classes.viewHeader}>
+          {icon}
+          <Typography>{title}</Typography>
+        </div>
+        <div className={classes.viewContent} data-testid={`view-${title}`}>
+          <Component
+            editingContextId={editingContextId}
+            selection={selection}
+            setSelection={setSelection}
+            readOnly={readOnly}
+          />
+        </div>
+      </div>
+    );
+  }
+
+  let classSite = side === 'left' ? classes.leftSite : classes.rightSite;
+  return (
+    <div className={classSite} data-testid={`site-${side}`}>
+      {viewSelector}
+      {selectedView}
     </div>
   );
 };
