@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021 Obeo and others.
+ * Copyright (c) 2021, 2022 Obeo and others.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -47,6 +47,7 @@ export type WorkbenchViewSide = 'left' | 'right';
 export interface WorkbenchViewContributionProps {
   side: WorkbenchViewSide;
   title: string;
+  icon: React.ReactElement;
   component: (props: WorkbenchViewComponentProps) => JSX.Element;
 }
 
